# sigmax

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  build.sh  clean_rebuild.sh  configure.sh  configure_and_build.sh  format.sh  format_cmake.sh  format_cpp.sh  setup.sh  sigmax_aliases  sigmax_exports
.github/: constants.env
.github/workflows/: ci.yml  codeql-analysis.yml
benchmarks/: CMakeLists.txt  benchmark_utils.cpp  benchmark_utils.hpp  mpsc_queue_benchmark.cpp  mpsc_queue_benchmark.hpp
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  Utilities.cmake
configured_files/: config.hpp.in
docs/: datafeeder.md  design_doc.md
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/sigmax/: sample_library.hpp
results/: .gitignore
scripts/: run_benchmarks.sh  visualize_benchmarks.py
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/sigmax/: CMakeLists.txt  binance_api.cpp  binance_api.hpp  database.cpp  database.hpp  error_codes.cpp  error_codes.hpp  instruments.hpp  log.cpp  log.hpp  mpsc_queue.cpp  mpsc_queue.hpp  order_type.hpp  sigmax_app.cpp  sigmax_exit_codes.cpp  sigmax_exit_codes.hpp
test/: CMakeLists.txt  constexpr_tests.cpp  mpsc_test.cpp  tests.cpp
